syntax = "proto3";

package hello;

option go_package = "github.com/shshimamo/knowledge/protobufs/example/hello/gen/pb_go";

service helloService{
 rpc GetServerResponse(Message) returns (MessageResponse) {}
 rpc Optional(Message) returns (OptionalResponse) {}
 rpc OptionalOneOf(Message) returns (OptionalOneOfResponse) {}
}

message Message{
 string message = 1;
}

message MessageResponse{
 string message = 1;
 bool received = 2;
}

message OptionalResponse{
   Message message = 1;
   string  messageStr = 2;
}

message OptionalOneOfResponse{
 oneof messageOneOf {
  Message message = 1;
 }
 string  messageStr = 2;
}